Fix menu alignment

--- a/resources/assets/styles/layouts/_header.css
+++ b/resources/assets/styles/layouts/_header.css
@@ -212,7 +212,7 @@
   padding-left: 0;
 }
 
-#menu-primary a {
+#menu-primary ul a {
   font-weight: normal;
   padding-left: 2.5rem;
 }
